--- a/WebBrowser/SettingActivityTableViewCell.xib
+++ b/WebBrowser/SettingActivityTableViewCell.xib
@@ -33,8 +33,8 @@
                         <constraints>
                             <constraint firstAttribute="width" constant="80" id="veU-7p-lci"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
@@ -49,9 +49,9 @@
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="activityIndicatorView" destination="xNI-8B-W4P" id="fG1-0v-BEn"/>
-                <outlet property="leftLabel" destination="WqL-oJ-o47" id="Vke-IR-nS6"/>
-                <outlet property="rightLabel" destination="W7H-Wl-NbU" id="X0B-XG-Hkv"/>
+                <outlet property="activityIndicatorView" destination="xNI-8B-W4P" id="fB8-cK-HNA"/>
+                <outlet property="leftLabel" destination="WqL-oJ-o47" id="hM8-dV-Wqg"/>
+                <outlet property="rightLabel" destination="W7H-Wl-NbU" id="Nfg-Xi-NxQ"/>
             </connections>
         </tableViewCell>
     </objects>
