--- a/WebBrowser/SettingActivityTableViewCell.xib
+++ b/WebBrowser/SettingActivityTableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -16,7 +16,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="xNI-8B-W4P">
@@ -29,9 +29,9 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W7H-Wl-NbU" userLabel="right">
-                        <rect key="frame" x="225" y="22" width="80" height="0.0"/>
+                        <rect key="frame" x="250" y="22" width="70" height="0.0"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="80" id="veU-7p-lci"/>
+                            <constraint firstAttribute="width" constant="70" id="veU-7p-lci"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
@@ -44,8 +44,8 @@
                     <constraint firstItem="W7H-Wl-NbU" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="I6R-t5-R9r"/>
                     <constraint firstItem="xNI-8B-W4P" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Zpi-Ps-exK"/>
                     <constraint firstAttribute="trailingMargin" secondItem="xNI-8B-W4P" secondAttribute="trailing" id="o6s-RN-EQb"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="W7H-Wl-NbU" secondAttribute="trailing" constant="7" id="u0L-iI-UoF"/>
-                    <constraint firstItem="WqL-oJ-o47" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="7" id="xge-My-zMT"/>
+                    <constraint firstAttribute="trailing" secondItem="W7H-Wl-NbU" secondAttribute="trailing" id="u0L-iI-UoF"/>
+                    <constraint firstItem="WqL-oJ-o47" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="xge-My-zMT"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
