--- a/WebBrowser/Base.lproj/LaunchScreen.storyboard
+++ b/WebBrowser/Base.lproj/LaunchScreen.storyboard
@@ -20,7 +20,16 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="compas" translatesAutoresizingMaskIntoConstraints="NO" id="6xj-sj-ziC">
+                                <rect key="frame" x="179.5" y="325.5" width="16" height="16"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6xj-sj-ziC" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="W4o-nd-fO4"/>
+                            <constraint firstItem="6xj-sj-ziC" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="wEr-Wj-AfX"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -28,4 +37,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="compas" width="16" height="16"/>
+    </resources>
 </document>
