add bookmark feature

--- a/WebBrowser/BookmarkEditTextFieldTableViewCell.xib
+++ b/WebBrowser/BookmarkEditTextFieldTableViewCell.xib
@@ -18,11 +18,11 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="文件夹名称" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VcK-Iy-rfx" userLabel="textField">
+                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="文件夹名称" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="VcK-Iy-rfx" userLabel="textField">
                         <rect key="frame" x="15" y="0.0" width="305" height="43.5"/>
                         <nil key="textColor"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <textInputTraits key="textInputTraits"/>
+                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                     </textField>
                 </subviews>
                 <constraints>
