--- a/WebBrowser/SearchInputView.xib
+++ b/WebBrowser/SearchInputView.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,18 +13,18 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="SearchInputView">
-            <rect key="frame" x="0.0" y="0.0" width="386" height="58"/>
+            <rect key="frame" x="0.0" y="0.0" width="386" height="76"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FCa-f7-edY" userLabel="Bottom">
-                    <rect key="frame" x="0.0" y="29" width="386" height="29"/>
+                    <rect key="frame" x="0.0" y="38" width="386" height="38"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9Qy-yB-6Vq" customClass="CharacterSelectView">
-                            <rect key="frame" x="155" y="1" width="76" height="27"/>
+                            <rect key="frame" x="155" y="5.5" width="76" height="27"/>
                             <color key="backgroundColor" red="0.94901960780000005" green="0.95294117649999999" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
                         </view>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zil-jO-oBA">
-                            <rect key="frame" x="75" y="1" width="70" height="28"/>
+                            <rect key="frame" x="75" y="5.5" width="70" height="28"/>
                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                             <state key="normal" title="m.">
                                 <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
@@ -34,7 +34,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8cV-cq-7Yn">
-                            <rect key="frame" x="241" y="1" width="70" height="28"/>
+                            <rect key="frame" x="241" y="5.5" width="70" height="28"/>
                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                             <state key="normal" title="http://">
                                 <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
@@ -44,7 +44,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6hA-Jh-4fc">
-                            <rect key="frame" x="311" y="1" width="70" height="28"/>
+                            <rect key="frame" x="311" y="5.5" width="70" height="28"/>
                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                             <state key="normal" title="https://">
                                 <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
@@ -54,7 +54,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D55-SS-o61">
-                            <rect key="frame" x="5" y="1" width="70" height="28"/>
+                            <rect key="frame" x="5" y="5.5" width="70" height="28"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="70" id="8Pq-ZN-p5R"/>
                             </constraints>
@@ -88,10 +88,10 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6s0-41-uJS" userLabel="Top">
-                    <rect key="frame" x="0.0" y="0.0" width="386" height="29"/>
+                    <rect key="frame" x="0.0" y="0.0" width="386" height="38"/>
                     <subviews>
                         <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2q3-6j-q7J">
-                            <rect key="frame" x="340" y="-1" width="31" height="30"/>
+                            <rect key="frame" x="340" y="3.5" width="31" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="31" id="9p4-N0-sIA"/>
                             </constraints>
@@ -103,7 +103,7 @@
                             </connections>
                         </button>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="搜索或输入网址" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="3OO-76-FxZ">
-                            <rect key="frame" x="15" y="2" width="319" height="25"/>
+                            <rect key="frame" x="15" y="2.5" width="319" height="33"/>
                             <nil key="textColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="search" enablesReturnKeyAutomatically="YES"/>
@@ -115,6 +115,7 @@
                         <constraint firstItem="3OO-76-FxZ" firstAttribute="centerY" secondItem="6s0-41-uJS" secondAttribute="centerY" id="VFC-eo-uwh"/>
                         <constraint firstAttribute="trailing" secondItem="2q3-6j-q7J" secondAttribute="trailing" constant="15" id="dkQ-uW-Sic"/>
                         <constraint firstItem="3OO-76-FxZ" firstAttribute="leading" secondItem="6s0-41-uJS" secondAttribute="leading" constant="15" id="kfw-vw-rkE"/>
+                        <constraint firstAttribute="height" constant="38" id="oGO-cH-eUO"/>
                         <constraint firstItem="2q3-6j-q7J" firstAttribute="centerY" secondItem="3OO-76-FxZ" secondAttribute="centerY" id="otJ-V2-FxJ"/>
                         <constraint firstItem="3OO-76-FxZ" firstAttribute="height" secondItem="6s0-41-uJS" secondAttribute="height" multiplier="0.85" id="rDH-wQ-WCe"/>
                     </constraints>
@@ -122,14 +123,14 @@
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="FCa-f7-edY" firstAttribute="top" secondItem="6s0-41-uJS" secondAttribute="bottom" id="6bG-Ph-gpy"/>
                 <constraint firstItem="6s0-41-uJS" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="NBy-Ud-J0c"/>
                 <constraint firstAttribute="bottom" secondItem="FCa-f7-edY" secondAttribute="bottom" id="PUG-RX-yMH"/>
                 <constraint firstAttribute="trailing" secondItem="6s0-41-uJS" secondAttribute="trailing" id="VoJ-ua-tvO"/>
-                <constraint firstItem="FCa-f7-edY" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="0.5" id="ZHD-AM-H4k"/>
                 <constraint firstItem="FCa-f7-edY" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="g1m-hE-R0t"/>
+                <constraint firstItem="FCa-f7-edY" firstAttribute="height" secondItem="6s0-41-uJS" secondAttribute="height" id="gaw-1g-Fr6"/>
                 <constraint firstAttribute="trailing" secondItem="FCa-f7-edY" secondAttribute="trailing" id="qA9-65-Xsd"/>
                 <constraint firstItem="6s0-41-uJS" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="xSA-YE-bUC"/>
-                <constraint firstItem="6s0-41-uJS" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="0.5" id="xpX-D1-gk4"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
