--- a/WebBrowser/SettingActivityTableViewCell.xib
+++ b/WebBrowser/SettingActivityTableViewCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -16,11 +16,11 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="xNI-8B-W4P">
-                        <rect key="frame" x="292" y="11" width="20" height="20"/>
+                        <rect key="frame" x="277" y="11" width="20" height="20"/>
                     </activityIndicatorView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WqL-oJ-o47" userLabel="left">
                         <rect key="frame" x="15" y="22" width="0.0" height="0.0"/>
@@ -28,8 +28,8 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W7H-Wl-NbU" userLabel="right">
-                        <rect key="frame" x="250" y="22" width="70" height="0.0"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W7H-Wl-NbU" userLabel="right">
+                        <rect key="frame" x="242" y="22" width="70" height="0.0"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="70" id="veU-7p-lci"/>
                         </constraints>
@@ -43,8 +43,8 @@
                     <constraint firstItem="W7H-Wl-NbU" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="WqL-oJ-o47" secondAttribute="trailing" constant="1" id="AfA-Hp-ith"/>
                     <constraint firstItem="W7H-Wl-NbU" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="I6R-t5-R9r"/>
                     <constraint firstItem="xNI-8B-W4P" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Zpi-Ps-exK"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="xNI-8B-W4P" secondAttribute="trailing" id="o6s-RN-EQb"/>
-                    <constraint firstAttribute="trailing" secondItem="W7H-Wl-NbU" secondAttribute="trailing" id="u0L-iI-UoF"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="xNI-8B-W4P" secondAttribute="trailing" constant="15" id="o6s-RN-EQb"/>
+                    <constraint firstAttribute="trailing" secondItem="W7H-Wl-NbU" secondAttribute="trailing" constant="8" id="u0L-iI-UoF"/>
                     <constraint firstItem="WqL-oJ-o47" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="xge-My-zMT"/>
                 </constraints>
             </tableViewCellContentView>
